# CMake

./: .gitignore  .gitmodules  01 Introduction to CMake.docx
Practice/01HelloWorld/: CMakeLists.txt
Practice/02MultipleFiles/: CMakeLists.txt  main.cpp  my_lib.cpp  my_lib.h
Practice/03MultipleFolders/: CMakeLists.txt
Practice/03MultipleFolders/Application/: CMakeLists.txt  main.cpp
Practice/03MultipleFolders/Libraries/: CMakeLists.txt
Practice/03MultipleFolders/Libraries/MyLib01/: CMakeLists.txt
Practice/03MultipleFolders/Libraries/MyLib01/include/: MyLib01.h
Practice/03MultipleFolders/Libraries/MyLib01/src/: MyLib01.cpp
Practice/03MultipleFolders/Libraries/MyLib02/: CMakeLists.txt
Practice/03MultipleFolders/Libraries/MyLib02/include/: MyLib02.h
Practice/03MultipleFolders/Libraries/MyLib02/src/: MyLib02.cpp
Practice/04HeaderFileGeneration/: CMakeLists.txt
Practice/04HeaderFileGeneration/app/: CMakeLists.txt  main.cc
Practice/04HeaderFileGeneration/configured/: CMakeLists.txt  config.hpp.in
Practice/05ExternalGitRepo/: CMakeLists.txt  Makefile
Practice/05ExternalGitRepo/CMake/: add_git_submodule.cmake
Practice/06FetchContent/: CMakeLists.txt
Practice/07CPM/: CMakeLists.txt  main.cpp
